# agent-trust

./: CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SKILL.md  index.json  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
agent_trust/: __init__.py  bip39_english.py  bundle.py  cli.py  skill.py  tool_risk.py  x402_policy.py
docs/: AGENT_TRUST_FEEDBACK.md  AGENT_TRUST_FIRST_RUN.md  AGENT_TRUST_FOR_AGENTS.md  AGENT_TRUST_INTEGRATION.md  AGENT_TRUST_MVP.md  AGENT_TRUST_REVIEWER_EVIDENCE_HANDOFF.md  AGENT_TRUST_THREAT_MODEL.md  AGENT_TRUST_VALIDATION.md  COVERAGE_MATRIX.md  IMPROVEMENT_LOOP.md
examples/: README.md  agent_trust_adoption_readiness.py  agent_trust_agent_landing.json  agent_trust_atr_advisory_check.py  agent_trust_base_sepolia_live_boundary.py  agent_trust_base_sepolia_preflight.py  agent_trust_checksums.json  agent_trust_consumer_decision.py  agent_trust_doctor.py  agent_trust_efficacy_benchmark.py  agent_trust_evidence_transcript.py  agent_trust_framework_gate.py  agent_trust_idea_selector.py  agent_trust_import.py  agent_trust_layered_skill_scanning.py  agent_trust_manifest.json  agent_trust_request.py  agent_trust_review_decision_gate.py  agent_trust_review_packet.json  agent_trust_runtime_signal_gate.py  agent_trust_scanner_evidence.py  agent_trust_static_scope_check.py  agent_trust_temporal_multimodal_checklist.py  agent_trust_trajectory_eval.py  agent_trust_verify.py  agent_trust_zero_trust_gate.py  ideas.json  input.json  output.json  skill_manifest.json
schemas/: agent_trust_bundle.schema.json  (+3 more)
(+7 files in other folders)
