[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "agent-trust"
version = "0.2.0"
description = "Local pre-action trust bundles and skill installability checks for autonomous agents."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Rain / Ouroboros" }]
keywords = ["ai-agents", "agent-security", "mcp", "x402", "prompt-injection", "tool-risk"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security",
]
dependencies = []

[project.optional-dependencies]
test = ["pytest>=8"]

[project.scripts]
agent-trust = "agent_trust.cli:main"
agent-trust-skill = "agent_trust.skill:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
